remove content out of CV
