# CVM-Front/src/app/Services/SWAGGER/model/models.ts
@@ -1,16 +1,11 @@
-export * from './category';
 export * from './categoryDto';
 export * from './categoryDtoListResult';
 export * from './categoryDtoResult';
 export * from './createUserRequestDto';
-export * from './cv';
-export * from './cvCategory';
 export * from './cvDto';
 export * from './cvDtoListResult';
 export * from './cvDtoResult';
 export * from './errorDetail';
-export * from './job';
-export * from './jobCategory';
 export * from './jobDto';
 export * from './jobDtoListResult';
 export * from './jobDtoResult';
