# CVM-Front/src/app/Services/SWAGGER/swagger.json
@@ -218,7 +218,7 @@
                 ],
                 "parameters": [
                     {
-                        "name": "FileName",
+                        "name": "CandidateName",
                         "in": "query",
                         "style": "form",
                         "schema": {
@@ -384,47 +384,11 @@
                 ],
                 "parameters": [
                     {
-                        "name": "FileName",
+                        "name": "CandidateName",
                         "in": "query",
                         "style": "form",
                         "schema": {
                             "type": "string"
-                        }
-                    },
-                    {
-                        "name": "ContentType",
-                        "in": "query",
-                        "style": "form",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "Metadata",
-                        "in": "query",
-                        "style": "form",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "Categories",
-                        "in": "query",
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/components/schemas/Category"
-                            }
-                        }
-                    },
-                    {
-                        "name": "UploadedDate",
-                        "in": "query",
-                        "style": "form",
-                        "schema": {
-                            "type": "string",
-                            "format": "date-time"
                         }
                     },
                     {
@@ -436,15 +400,7 @@
                         }
                     },
                     {
-                        "name": "DownloadUrl",
-                        "in": "query",
-                        "style": "form",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "TextContent",
+                        "name": "ContentType",
                         "in": "query",
                         "style": "form",
                         "schema": {
@@ -798,60 +754,6 @@
     },
     "components": {
         "schemas": {
-            "Category": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "createdAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "updatedAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "createdBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "modifiedBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "tenantId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "name": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "description": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "cvs": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/CvCategory"
-                        },
-                        "nullable": true
-                    },
-                    "jobs": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/JobCategory"
-                        },
-                        "nullable": true
-                    }
-                },
-                "additionalProperties": false
-            },
             "CategoryDto": {
                 "type": "object",
                 "properties": {
@@ -964,124 +866,6 @@
                 },
                 "additionalProperties": false
             },
-            "Cv": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "createdAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "updatedAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "createdBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "modifiedBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "tenantId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "fileName": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "contentType": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "content": {
-                        "type": "string",
-                        "format": "byte",
-                        "nullable": true
-                    },
-                    "metadata": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "categories": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Category"
-                        },
-                        "nullable": true
-                    },
-                    "uploadedDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "originalFileName": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "downloadUrl": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "textContent": {
-                        "type": "string",
-                        "nullable": true
-                    }
-                },
-                "additionalProperties": false
-            },
-            "CvCategory": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "createdAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "updatedAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "createdBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "modifiedBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "tenantId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "cvId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "cv": {
-                        "$ref": "#/components/schemas/Cv"
-                    },
-                    "categoryId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "category": {
-                        "$ref": "#/components/schemas/Category"
-                    }
-                },
-                "additionalProperties": false
-            },
             "CvDto": {
                 "type": "object",
                 "properties": {
@@ -1109,7 +893,7 @@
                         "type": "integer",
                         "format": "int32"
                     },
-                    "fileName": {
+                    "candidateName": {
                         "type": "string",
                         "nullable": true
                     },
@@ -1119,13 +903,6 @@
                     },
                     "metadata": {
                         "type": "string",
-                        "nullable": true
-                    },
-                    "categories": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Category"
-                        },
                         "nullable": true
                     },
                     "uploadedDate": {
@@ -1196,113 +973,6 @@
                     "message": {
                         "type": "string",
                         "nullable": true
-                    }
-                },
-                "additionalProperties": false
-            },
-            "Job": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "createdAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "updatedAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "createdBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "modifiedBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "tenantId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "designation": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "description": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "startSalary": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "endSalary": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "categories": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Category"
-                        },
-                        "nullable": true
-                    },
-                    "employment": {
-                        "$ref": "#/components/schemas/NatureOfEmployment"
-                    },
-                    "location": {
-                        "$ref": "#/components/schemas/Location"
-                    }
-                },
-                "additionalProperties": false
-            },
-            "JobCategory": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "createdAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "updatedAt": {
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "createdBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "modifiedBy": {
-                        "type": "string",
-                        "nullable": true
-                    },
-                    "tenantId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "jobId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "job": {
-                        "$ref": "#/components/schemas/Job"
-                    },
-                    "categoryId": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "category": {
-                        "$ref": "#/components/schemas/Category"
                     }
                 },
                 "additionalProperties": false
